reformatted emacs configuration file

--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -42,16 +42,16 @@
 
     ;; Assuming you wish to install "iedit" and "magit"
     (ensure-package-installed 'evil
-			    'evil-surround
-			    'evil-magit
-			    'org
-			    'helm
-			    'projectile
-			    'powerline
-			    'ox-twbs
-			    'ox-impress-js
-			    'org-bullets
-			    'magit)
+			      'evil-surround
+				  'magit
+			      'evil-magit
+			      'org
+			      'helm
+			      'projectile
+			      'powerline
+			      'ox-twbs
+			      'ox-impress-js
+			      'org-bullets)
 #+END_SRC
 
 * Import and configure packages
@@ -92,9 +92,11 @@
     ;; If you edit it by hand, you could mess it up, so be careful.
     ;; Your init file should contain only one such instance.
     ;; If there is more than one, they won't work right.
-    '(default ((t (:family "Inconsolata" :foundry "PfEd" :slant normal :weight normal :height 158 :width normal)))))
-    ;;(global-linum-mode t)
+    '(default ((t (:family "Inconsolata" :foundry "PfEd" :slant normal :weight normal :height 170 :width normal)))))
+
+    (global-linum-mode t)
     (setq ring-bell-function 'ignore)
+	(setq-default with-editor-emacsclient-executable "/usr/local/bin/emacsclient")
 #+END_SRC
 * Custom key bindings
 #+BEGIN_SRC emacs-lisp
