--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -1,114 +1,1 @@
-* Use sensible-defaults.el
-#+BEGIN_SRC emacs-lisp
-    (load-file "~/.emacs.d/sensible-defaults.el")
-    (sensible-defaults/delete-trailing-whitespace)
-    (sensible-defaults/quiet-startup)
-    (sensible-defaults/make-dired-file-sizes-human-readable)
-    (sensible-defaults/shorten-yes-or-no)
-    (sensible-defaults/always-highlight-code)
-    (sensible-defaults/refresh-buffers-when-files-change)
-    (sensible-defaults/show-matching-parens)
-    (sensible-defaults/set-default-line-length-to 80)
-#+END_SRC
-
-* Check all packages installed upon startup
-#+BEGIN_SRC emacs-lisp
-    (require 'package)
-    (add-to-list 'package-archives '("org" . "http://orgmode.org/elpa/"))
-    (add-to-list 'package-archives '("melpa" . "http://melpa.org/packages/"))
-    (add-to-list 'package-archives '("melpa-stable" . "http://stable.melpa.org/packages/"))
-    (setq package-enable-at-startup nil)
-    (package-initialize)
-
-    (defun ensure-package-installed (&rest packages)
-    "Assure every package is installed, ask for installation if it’s not.
-
-    Return a list of installed packages or nil for every skipped package."
-    (mapcar
-    (lambda (package)
-	(if (package-installed-p package)
-	    nil
-	(if (y-or-n-p (format "Package %s is missing. Install it? " package))
-	    (package-install package)
-	    package)))
-    packages))
-
-    ;; Make sure to have downloaded archive description.
-    (or (file-exists-p package-user-dir)
-	(package-refresh-contents))
-
-    ;; Activate installed packages
-    (package-initialize)
-
-    ;; Assuming you wish to install "iedit" and "magit"
-    (ensure-package-installed 'evil
-			      'evil-surround
-                              'evil-leader
-			      'magit
-			      'evil-magit
-			      'org
-                              'evil-org
-			      'helm
-			      'projectile
-			      'powerline
-			      'ox-twbs
-			      'ox-impress-js
-			      'org-bullets)
-#+END_SRC
-
-* Import and configure packages
-#+BEGIN_SRC emacs-lisp
-    (require 'evil-leader)
-    (global-evil-leader-mode)
-    (evil-leader/set-key
-        "e" 'find-file
-        "b" 'switch-to-buffer
-        "k" 'kill-buffer)
-    (require 'evil)
-    (evil-mode 1)
-    (require 'evil-surround)
-    (global-evil-surround-mode 1)
-    (require 'helm-config)
-    (helm-mode 1)
-    (require 'org)
-    (setq org-log-done t)
-    (setq org-ellipsis "⤵")
-    (setq org-src-fontify-natively t)
-    (setq org-src-tab-acts-natively t)
-    (setq org-src-window-setup 'current-window)
-    (require 'evil-org)
-    (require 'powerline)
-    (powerline-default-theme)
-    (require 'evil-magit)
-    (require 'ox-twbs)
-    (require 'ox-impress-js)
-    (require 'org-bullets)
-    (add-hook 'org-mode-hook (lambda () (org-bullets-mode 1)))
-    (load-theme 'misterioso t)
-#+END_SRC
-
-* Custom variables and fonts
-#+BEGIN_SRC emacs-lisp
-    (custom-set-variables
-    ;; custom-set-variables was added by Custom.
-    ;; If you edit it by hand, you could mess it up, so be careful.
-    ;; Your init file should contain only one such instance.
-    ;; If there is more than one, they won't work right.
-    '(blink-cursor-mode nil)
-    '(show-paren-mode t))
-    (custom-set-faces
-    ;; custom-set-faces was added by Custom.
-    ;; If you edit it by hand, you could mess it up, so be careful.
-    ;; Your init file should contain only one such instance.
-    ;; If there is more than one, they won't work right.
-    '(default ((t (:family "Inconsolata" :foundry "PfEd" :slant normal :weight normal :height 170 :width normal)))))
-
-    (global-linum-mode t)
-    (setq ring-bell-function 'ignore)
-	(setq-default with-editor-emacsclient-executable "/usr/local/bin/emacsclient")
-#+END_SRC
-* Custom key bindings
-#+BEGIN_SRC emacs-lisp
-    (global-set-key (kbd "M-x") 'helm-M-x)
-    (global-set-key (kbd "C-x g") 'magit-status)
-#+END_SRC
+/home/bobby/.emacs.d/configuration.org
