--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -1,6 +1,6 @@
 * Use sensible-defaults.el
 #+BEGIN_SRC emacs-lisp
-    (load-file "~/.emacs.d/sensible-defaults.el")
+    (load-file "~/GitProjects/environment-setup/.emacs.d/sensible-defaults.el")
     (sensible-defaults/delete-trailing-whitespace)
     (sensible-defaults/quiet-startup)
     (sensible-defaults/make-dired-file-sizes-human-readable)
@@ -45,7 +45,6 @@
                               'evil-leader
 			      'magit
 			      'evil-magit
-			      'org
                               'evil-org
 			      'helm
 			      'projectile
@@ -53,6 +52,27 @@
 			      'ox-twbs
 			      'ox-impress-js
 			      'org-bullets)
+#+END_SRC
+* Custom variables and fonts
+#+BEGIN_SRC emacs-lisp
+    (custom-set-variables
+    ;; custom-set-variables was added by Custom.
+    ;; If you edit it by hand, you could mess it up, so be careful.
+    ;; Your init file should contain only one such instance.
+    ;; If there is more than one, they won't work right.
+    '(blink-cursor-mode nil)
+    ;;'(show-paren-mode t))
+    (custom-set-faces
+    ;; custom-set-faces was added by Custom.
+    ;; If you edit it by hand, you could mess it up, so be careful.
+    ;; Your init file should contain only one such instance.
+    ;; If there is more than one, they won't work right.
+    '(default ((t (:family "Inconsolata" :foundry "PfEd" :slant normal :weight normal :height 170 :width normal)))))
+
+    (global-linum-mode t)
+    (setq ring-bell-function 'ignore)
+    (global-visual-line-mode t)
+    ;;(setq-default with-editor-emacsclient-executable "/usr/local/bin/emacsclient")
 #+END_SRC
 * Import and configure packages
 #+BEGIN_SRC emacs-lisp
@@ -74,6 +94,7 @@
     (setq org-src-fontify-natively t)
     (setq org-src-tab-acts-natively t)
     (setq org-src-window-setup 'current-window)
+    (setq org-html-postamble nil)
     (require 'evil-org)
     (require 'powerline)
     (powerline-default-theme)
@@ -83,26 +104,6 @@
     (require 'org-bullets)
     (add-hook 'org-mode-hook (lambda () (org-bullets-mode 1)))
     (load-theme 'misterioso t)
-#+END_SRC
-* Custom variables and fonts
-#+BEGIN_SRC emacs-lisp
-    (custom-set-variables
-    ;; custom-set-variables was added by Custom.
-    ;; If you edit it by hand, you could mess it up, so be careful.
-    ;; Your init file should contain only one such instance.
-    ;; If there is more than one, they won't work right.
-    '(blink-cursor-mode nil)
-    '(show-paren-mode t))
-    (custom-set-faces
-    ;; custom-set-faces was added by Custom.
-    ;; If you edit it by hand, you could mess it up, so be careful.
-    ;; Your init file should contain only one such instance.
-    ;; If there is more than one, they won't work right.
-    '(default ((t (:family "Inconsolata" :foundry "PfEd" :slant normal :weight normal :height 170 :width normal)))))
-
-    (global-linum-mode t)
-    (setq ring-bell-function 'ignore)
-    ;;(setq-default with-editor-emacsclient-executable "/usr/local/bin/emacsclient")
 #+END_SRC
 * Custom key bindings
 #+BEGIN_SRC emacs-lisp
