--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -70,6 +70,9 @@
   ;; Your init file should contain only one such instance.
   ;; If there is more than one, they won't work right.
   '(blink-cursor-mode nil)
+  (if (eq system-type 'darwin)
+      '(with-editor-emacsclient-executable "/usr/local/bin/emacsclient")
+  )
   ;;'(show-paren-mode t)
   )
   (custom-set-faces
@@ -83,7 +86,6 @@
   (setq ring-bell-function 'ignore)
   (setq-default indent-tabs-mode nil)
   (global-visual-line-mode t)
-  ;;(setq-default with-editor-emacsclient-executable "/usr/local/bin/emacsclient")
 #+END_SRC
 * Import org and configure
 #+BEGIN_SRC emacs-lisp
