--- a/.emacs.d/configuration.org
+++ b/.emacs.d/configuration.org
@@ -1,3 +1,12 @@
+* Add package archives
+#+BEGIN_SRC emacs-lisp
+  (require 'package)
+  (add-to-list 'package-archives '("org" . "http://orgmode.org/elpa/") t)
+  (add-to-list 'package-archives '("melpa" . "http://melpa.org/packages/") t)
+  (add-to-list 'package-archives '("melpa-stable" . "http://stable.melpa.org/packages/") t)
+  (setq package-enable-at-startup nil)
+  (package-initialize)
+#+END_SRC
 * Use sensible-defaults.el
 #+BEGIN_SRC emacs-lisp
   (load-file "~/GitProjects/environment-setup/.emacs.d/sensible-defaults.el")
@@ -9,15 +18,6 @@
   (sensible-defaults/refresh-buffers-when-files-change)
   (sensible-defaults/show-matching-parens)
   (sensible-defaults/set-default-line-length-to 80)
-#+END_SRC
-* Add package archives
-#+BEGIN_SRC emacs-lisp
-  (require 'package)
-  (add-to-list 'package-archives '("org" . "http://orgmode.org/elpa/"))
-  (add-to-list 'package-archives '("melpa" . "http://melpa.org/packages/"))
-  (add-to-list 'package-archives '("melpa-stable" . "http://stable.melpa.org/packages/"))
-  (setq package-enable-at-startup nil)
-  (package-initialize)
 #+END_SRC
 * Check all packages installed upon startup
 #+BEGIN_SRC emacs-lisp
@@ -46,7 +46,6 @@
                             'evil-leader
                             'magit
                             'evil-magit
-                            'org
                             'evil-org
                             'helm
                             'projectile
